database: Remove Postgres credentials in Production

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: final_capstone_production
-  username: final_capstone
-  password: <%= ENV['FINAL_CAPSTONE_DATABASE_PASSWORD'] %>
+  # username: final_capstone
+  # password: <%= ENV['FINAL_CAPSTONE_DATABASE_PASSWORD'] %>
