--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "bootstrap": "^4.5.2",
     "heroku": "^7.42.13",
     "jquery": "^3.5.1",
+    "moment": "^2.28.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
@@ -51,11 +53,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rammazzoti2000/final-capstone.git"
-  },
-  "author": "",
+  "repository": "git+https://github.com/rammazzoti2000/final-capstone.git",
+  "author": "<rammazzoti2000@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rammazzoti2000/final-capstone/issues"
